--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Marcelo's GitHub Page</title>
+  <title>Welcome to Marcelo's Page</title>
   <!-- Google Analytics Tracking Code -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-2CHLFC0RW0"></script>
   <script>
@@ -29,6 +29,10 @@
       color: #fff;
       padding: 15px 20px;
       text-align: center;
+    }
+
+    header h1 {
+      color: #fff;
     }
 
     main {
@@ -78,64 +82,56 @@
 
 <body>
   <header>
-    <h1>Hi there 👋</h1>
-    <p>Welcome to Marcelo's GitHub Page</p>
+    <h1>Welcome to Marcelo's Profile Page</h1>
+    <p>📧 <a href="mailto:marcsopranzi@gmail.com" style="color: #fff; text-decoration: underline;">marcsopranzi@gmail.com</a></p>
   </header>
 
   <main>
     <section>
       <h2>About Me</h2>
-      <p>I am Marcelo, a Data Engineer passionate about working with data and streaming data. I am committed to automating everything apart from creativity :)</p>
+      <p>I am Marcelo, a Data Engineer passionate about working with data and streaming solutions. I am dedicated to automating processes while fostering creativity :)</p>
+      <p>With over 10 years of experience, I specialize in designing and implementing end-to-end data solutions, ranging from data ingestion to reporting. I have successfully modernized many manual and on-premises monolithic systems into scalable, cloud-based applications. My expertise includes designing and implementing data warehouses, data lakes, and streaming solutions, with a strong focus on RBAC, Data Quality, and GDPR compliance.</p>
+      <p>🔍 <strong>Open to Flexible Opportunities:</strong> I am excited about roles where I can apply my expertise to create impactful solutions, whether in contract or permanent positions, and collaborate effectively in remote or hybrid environments.</p>
     </section>
+    
 
     <section>
       <h2>🔭 What I’m Currently Working On...</h2>
-      <p>I am building data warehouses and pipelines using technologies such as Python, SQL, GitHub Actions, AWS, Kubernetes, Docker, Terraform, Jenkins, and Airflow. I have designed and implemented data warehouses, data lakes, and streaming solutions from scratch, focusing on RBAC, Data Quality, and GDPR compliance.</p>
+      <p>I am developing data solutions and pipelines using technologies such as Python, SQL, GitHub Actions, AWS, Kubernetes, Docker, and Airflow.</p>
     </section>
 
     <section>
       <h2>🚀 Projects</h2>
       <div class="project">
-        <h3>K8s ETL Pipeline</h3>
-        <p>This project demonstrates a Kubernetes-based ETL pipeline for processing data using containerized components. It showcases orchestration, data transformations, and scaling capabilities using Kubernetes.</p>
-        <p>
-          <a href="https://github.com/marcsopranzi/k8s-etl-pipeline" target="_blank">View Project on GitHub</a>
-        </p>
+        <h3>Scalable ETL Pipeline</h3>
+        <p>This project demonstrates a Docker-Kubernetes based GCP ETL pipeline for processing data using containerized components. It showcases orchestration, data transformations, and scalability using Kubernetes.</p>
+        <p><a href="https://github.com/marcsopranzi/k8s-etl-pipeline" target="_blank">View Project on GitHub</a></p>
       </div>
       <div class="project">
         <h3>DWH Foundations</h3>
-        <p>In this project I'm taking a friendly approach both on premises and on the cloud of core concept such as data lineage for a DWH.</p>
-        <p>
-          <a href="https://github.com/marcsopranzi/docker-airflow-gcp" target="_blank">View Project on GitHub</a>
-        </p>
+        <p>This project takes a straightforward approach using Airflow and GCP for both on-premises and cloud-based core concepts, such as data lineage for a data warehouse.</p>
+        <p><a href="https://github.com/marcsopranzi/docker-airflow-gcp" target="_blank">View Project on GitHub</a></p>
       </div>
       <div class="project">
-        <h3>Real Time Processing</h3>
-        <p>In this project I'm showing how to use together Kakfa, Pyspark and Cassandra to create a realtime ingestion</p>
-        <p>
-          <a href="https://github.com/marcsopranzi/kafka_stream" target="_blank">View Project on GitHub</a>
-        </p>
+        <h3>Real-Time Processing</h3>
+        <p>This project showcases the integration of Kafka, PySpark, and Cassandra to create a real-time data ingestion solution.</p>
+        <p><a href="https://github.com/marcsopranzi/kafka_stream" target="_blank">View Project on GitHub</a></p>
       </div>
       <div class="project">
-        <h3>Deploying an ETL with Slack notifications</h3>
-        <p>In this project I'm showing how launch IaC for a small ETL served with SNS- Slack Notifications</p>
-        <p>
-          <a href="https://github.com/marcsopranzi/aws_flat_files_with_lambda_sns" target="_blank">View Project on GitHub</a>
-        </p>
+        <h3>Deploying an ETL with Notifications</h3>
+        <p>This project demonstrates how to launch infrastructure-as-code (IaC) in AWS for a small ETL pipeline with Slack notifications via Lambda & SNS.</p>
+        <p><a href="https://github.com/marcsopranzi/aws_flat_files_with_lambda_sns" target="_blank">View Project on GitHub</a></p>
       </div>
       <div class="project">
-        <h3>Deploying a static website using CI/CD principles</h3>
-        <p>In this project I'm using github actions to deploy changes to different buckets depending on the branch name </p>
-        <p>
-          <a href="https://github.com/marcsopranzi/aws_ci_cd_github_actions" target="_blank">View Project on GitHub</a>
-        </p>
+        <h3>Deploying an solution with CI/CD Principles</h3>
+        <p>In this project for a website, I used GitHub Actions to deploy changes to different buckets based on branch names.</p>
+        <p><a href="https://github.com/marcsopranzi/aws_ci_cd_github_actions" target="_blank">View Project on GitHub</a></p>
       </div>
-
     </section>
   </main>
 
   <footer>
-    <p>© 2024 Marcelo Sopranzi | <a href="https://github.com/marcsopranzi" target="_blank">GitHub Profile</a></p>
+    <p>© 2024 Marcelo Sopranzi | 📧 <a href="mailto:marcsopranzi@gmail.com">marcsopranzi@gmail.com</a> | <a href="https://github.com/marcsopranzi" target="_blank">GitHub Profile</a></p>
   </footer>
 </body>
 
