--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <main>
     <section>
       <h2>About Me</h2>
-      <p>I am Marcelo, a Data Engineer passionate about working with data and streaming solutions. I am dedicated to automating processes while fostering creativity :)</p>
+      <p>I am Marcelo, a Data Engineer passionate about working with data and streaming solutions. I am committed to automating everything apart from the creativity :)</p>
       <p>With over 10 years of experience, I specialize in designing and implementing end-to-end data solutions, ranging from data ingestion to reporting. I have successfully modernized many manual and on-premises monolithic systems into scalable, cloud-based applications. My expertise includes designing and implementing data warehouses, data lakes, and streaming solutions, with a strong focus on RBAC, Data Quality, and GDPR compliance.</p>
       <p>🔍 <strong>Open to Flexible Opportunities:</strong> I am excited about roles where I can apply my expertise to create impactful solutions, whether in contract or permanent positions, and collaborate effectively in remote or hybrid environments.</p>
     </section>
