--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <section>
       <h2>🔭 What I’m Currently Working On...</h2>
-      <p>I am developing data solutions and pipelines using technologies such as Python, SQL, GitHub Actions, AWS, Kubernetes, Docker, and Airflow.</p>
+      <p>I am developing data solutions and pipelines using technologies such as Python, SQL, GitHub Actions, DBT, AWS, Kubernetes, Docker and Airflow.</p>
     </section>
 
     <section>
@@ -123,7 +123,7 @@
         <p><a href="https://github.com/marcsopranzi/aws_flat_files_with_lambda_sns" target="_blank">View Project on GitHub</a></p>
       </div>
       <div class="project">
-        <h3>Deploying an solution with CI/CD Principles</h3>
+        <h3>Deploying a solution with CI/CD Principles</h3>
         <p>In this project for a website, I used GitHub Actions to deploy changes to different buckets based on branch names.</p>
         <p><a href="https://github.com/marcsopranzi/aws_ci_cd_github_actions" target="_blank">View Project on GitHub</a></p>
       </div>
